updated last file

--- a/single-playlist-screen.html
+++ b/single-playlist-screen.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Single Playlist Screen</title>
     <link rel="stylesheet" href="playlist-styles.css" type="text/css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+        integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 
 <body>
@@ -57,7 +59,7 @@
         <section id="middle-section">
             <div class="jumbotron">
                 <div class="jumbotron-image">
-                    <img src="images/alicia-keys.png">
+                    <img src="images/ariana-grande.jpg">
 
                 </div>
                 <div class="jumbotron-details">
@@ -107,17 +109,325 @@
                     </div>
 
                     <div class="right">
-                        2:18
+                        <span><i class="far fa-heart"></i></span>
+                        <span><i class="fas fa-plus"></i></span>
 
                     </div>
 
                 </div>
+
+                <div class="playlist-item">
+                    <div class="left">
+                        <span id="album-id">01</span>
+                        <img id ="album-img" src="images/artist-2.jpg">
+                        <div id="album-info">
+                            <span>Alone</span><br>
+                            <span>Alan Walker</span>
+                        </div>
+
+                    </div>
+
+                    <div class="center">
+                        3:14
+
+                    </div>
+
+                    <div class="right">
+                        <span><i class="far fa-heart"></i></span>
+                        <span><i class="fas fa-plus"></i></span>
+
+                    </div>
+
+                </div>
+
+                <div class="playlist-item">
+                    <div class="left">
+                        <span id="album-id">01</span>
+                        <img id ="album-img" src="images/artist-2.jpg">
+                        <div id="album-info">
+                            <span>Alone</span><br>
+                            <span>Alan Walker</span>
+                        </div>
+
+                    </div>
+
+                    <div class="center">
+                        3:14
+
+                    </div>
+
+                    <div class="right">
+                        <span><i class="far fa-heart"></i></span>
+                        <span><i class="fas fa-plus"></i></span>
+
+                    </div>
+
+                </div>
+
+                <div class="playlist-item">
+                    <div class="left">
+                        <span id="album-id">01</span>
+                        <img id ="album-img" src="images/artist-2.jpg">
+                        <div id="album-info">
+                            <span>Alone</span><br>
+                            <span>Alan Walker</span>
+                        </div>
+
+                    </div>
+
+                    <div class="center">
+                        3:14
+
+                    </div>
+
+                    <div class="right">
+                        <span><i class="far fa-heart"></i></span>
+                        <span><i class="fas fa-plus"></i></span>
+
+                    </div>
+
+                </div>
+
+                <div class="playlist-item">
+                    <div class="left">
+                        <span id="album-id">01</span>
+                        <img id ="album-img" src="images/artist-2.jpg">
+                        <div id="album-info">
+                            <span>Alone</span><br>
+                            <span>Alan Walker</span>
+                        </div>
+
+                    </div>
+
+                    <div class="center">
+                        3:14
+
+                    </div>
+
+                    <div class="right">
+                        <span><i class="far fa-heart"></i></span>
+                        <span><i class="fas fa-plus"></i></span>
+
+                    </div>
+
+                </div>
+
+                <div class="playlist-item">
+                    <div class="left">
+                        <span id="album-id">01</span>
+                        <img id ="album-img" src="images/artist-2.jpg">
+                        <div id="album-info">
+                            <span>Alone</span><br>
+                            <span>Alan Walker</span>
+                        </div>
+
+                    </div>
+
+                    <div class="center">
+                        3:14
+
+                    </div>
+
+                    <div class="right">
+                        <span><i class="far fa-heart"></i></span>
+                        <span><i class="fas fa-plus"></i></span>
+
+                    </div>
+
+                </div>
+
+                <div class="playlist-item">
+                    <div class="left">
+                        <span id="album-id">01</span>
+                        <img id ="album-img" src="images/artist-2.jpg">
+                        <div id="album-info">
+                            <span>Alone</span><br>
+                            <span>Alan Walker</span>
+                        </div>
+
+                    </div>
+
+                    <div class="center">
+                        3:14
+
+                    </div>
+
+                    <div class="right">
+                        <span><i class="far fa-heart"></i></span>
+                        <span><i class="fas fa-plus"></i></span>
+
+                    </div>
+
+                </div>
+
+                <div class="playlist-item">
+                    <div class="left">
+                        <span id="album-id">01</span>
+                        <img id ="album-img" src="images/artist-2.jpg">
+                        <div id="album-info">
+                            <span>Alone</span><br>
+                            <span>Alan Walker</span>
+                        </div>
+
+                    </div>
+
+                    <div class="center">
+                        3:14
+
+                    </div>
+
+                    <div class="right">
+                        <span><i class="far fa-heart"></i></span>
+                        <span><i class="fas fa-plus"></i></span>
+
+                    </div>
+
+                </div>
+
+                <div class="playlist-item">
+                    <div class="left">
+                        <span id="album-id">01</span>
+                        <img id ="album-img" src="images/artist-2.jpg">
+                        <div id="album-info">
+                            <span>Alone</span><br>
+                            <span>Alan Walker</span>
+                        </div>
+
+                    </div>
+
+                    <div class="center">
+                        3:14
+
+                    </div>
+
+                    <div class="right">
+                        <span><i class="far fa-heart"></i></span>
+                        <span><i class="fas fa-plus"></i></span>
+
+                    </div>
+
+                </div>
+
+                <div class="playlist-item">
+                    <div class="left">
+                        <span id="album-id">01</span>
+                        <img id ="album-img" src="images/artist-2.jpg">
+                        <div id="album-info">
+                            <span>Alone</span><br>
+                            <span>Alan Walker</span>
+                        </div>
+
+                    </div>
+
+                    <div class="center">
+                        3:14
+
+                    </div>
+
+                    <div class="right">
+                        <span><i class="far fa-heart"></i></span>
+                        <span><i class="fas fa-plus"></i></span>
+
+                    </div>
+
+                </div>
+
+
+
+
+
 
             </div>
 
         </section>
     </main>
     <aside>
+        <section>
+
+            <div class="playlist-title-container">
+                <span class="child1">Similar Artists</span>
+                <span class="child2">View All</span>
+
+
+            </div>
+
+        </section>
+        <section>
+            <div class="similar-artists">
+                <div class="music-container">
+                    <div class="music-image">
+                        <img src="images/binding-lights.png">
+
+                    </div>
+                    <div class="music-name">
+                        <span>Binding Lights</span><br>
+                        <span>Weeknd</span>
+
+                    </div>
+
+                    <div class="push">
+                        <span><i class="fas fa-ellipsis-h"></i></span><br>
+                        <span>4:44</span>
+                    </div>
+
+                </div>
+
+                <div class="music-container">
+                    <div class="music-image">
+                        <img src="images/artist-1.jpg">
+
+                    </div>
+                    <div class="music-name">
+                        <span>Alone Again</span><br>
+                        <span>Weeknd</span>
+
+                    </div>
+
+                    <div class="push">
+                        <span><i class="fas fa-ellipsis-h"></i></span><br>
+                        <span>4:44</span>
+                    </div>
+
+                </div>
+                <div class="music-container">
+                    <div class="music-image">
+                        <img src="images/artist-1.jpg">
+
+                    </div>
+                    <div class="music-name">
+                        <span>Onism</span><br>
+                        <span>09,Aug,2021</span>
+
+                    </div>
+
+                    <div class="push">
+                        <span><i class="fas fa-ellipsis-h"></i></span><br>
+                        <span>4:44</span>
+                    </div>
+
+                </div>
+                <div class="music-container">
+                    <div class="music-image">
+                        <img src="images/artist-1.jpg">
+
+                    </div>
+                    <div class="music-name">
+                        <span>Onism</span><br>
+                        <span>09,Aug,2021</span>
+
+                    </div>
+
+                    <div class="push">
+                        <span><i class="fas fa-ellipsis-h"></i></span><br>
+                        <span>4:44</span>
+                    </div>
+
+                </div>
+
+
+            </div>
+
+        </section>
         <section>
 
             <div class="playlist-title-container">
@@ -128,7 +438,7 @@
             </div>
 
         </section>
-        <section>
+        <section class="recently-played">
             <div class="playlist-queue-container">
                 <div class="playlist-container">
                     <span class="playlist-no">01</span>
