added comment in html and css file

--- a/single-playlist-screen.html
+++ b/single-playlist-screen.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!--Header starts from here.It contains name,favourites,search,notifications and profile picture.-->
     <header id="body-header">
         <div class="header-container">
             <div class="header-first-container">
@@ -56,6 +57,8 @@
         </div>
     </header>
     <main>
+        <!--Main section is divided into 2 sections-->
+        <!--This section contains artist image,info and followers-->
         <section id="middle-section">
             <div class="jumbotron">
                 <div class="jumbotron-image">
@@ -90,6 +93,7 @@
                 </div>
             </div>
         </section>
+        <!--This section contains all the songs in playlist-->
         <section id="end-section">
             <div class="playlist-items">
                 <div class="playlist-item">
@@ -342,6 +346,8 @@
         </section>
     </main>
     <aside>
+
+        <!--This section is for title of similar artist list-->
         <section>
 
             <div class="playlist-title-container">
@@ -352,6 +358,7 @@
             </div>
 
         </section>
+        <!--Similar artist list-->
         <section>
             <div class="similar-artists">
                 <div class="music-container">
@@ -428,6 +435,7 @@
             </div>
 
         </section>
+        <!--This section is for title of recently played list-->
         <section>
 
             <div class="playlist-title-container">
@@ -438,6 +446,7 @@
             </div>
 
         </section>
+        <!--This section is for list of recently played-->
         <section class="recently-played">
             <div class="playlist-queue-container">
                 <div class="playlist-container">
@@ -533,7 +542,9 @@
 
         </section>
     </aside>
+    <!--Footer starts from here-->
     <footer class="page-footer">
+        <!--Left section of player-->
         <div class="music-player">
             <div class="active-song-description">
                 <div id="song-image">
@@ -552,6 +563,8 @@
 
             </div>
 
+            <!--Middle section of footer-->
+
             <div class="song-player">
                 <div id="song-toggle">
                     <span><i class="fas fa-random"></i></span>
@@ -567,6 +580,8 @@
                 </div>
 
             </div>
+
+            <!--right section of footer-->
 
             <div class="music-toggle">
 
